src/test/resources/public/input/typechecking/pass/pass19.jova
class Evaluation{
  private int c1;

  private int func1(){
    int a, b, c, d;
    bool b1, b2;
    string f;

    if(a){
        a = 0;
    }
    while(b1){
        c = 1;
    }
    return a;
  }
}

